@@ -4,7 +4,7 @@ gem 'rails', '4.2.5.1'
 gem 'sqlite3'
 
 gem 'dotenv-rails'
-gem 'shopify_app', '~> 6.4.1'
+gem 'shopify_app', '~> 7.0.0'
 
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
